fix handling of duplicate image refs when saving drafts in compose window, r=neil, bug 754655